package com.github.mayconr.juoserver.game.economy;

import com.github.mayconr.juoserver.game.model.NpcRole;

public record VendorNpcRole(String regionName) implements NpcRole {
}
