package com.github.mayconr.juoserver.game.model;

public interface NpcRole {
}
