@startuml

' =========================
' NPC
' =========================
class UONpc {
    - role : NpcRole
}

' =========================
' ROLES
' =========================
interface NpcRole

class VendorNpcRole {
    - regionName : String
}

class BankerNpcRole

NpcRole <|.. VendorNpcRole
NpcRole <|.. BankerNpcRole

UONpc --> NpcRole

' =========================
' ECONOMY SERVICE
' =========================
class EconomyService {
    - pools : Map<String, RegionStockPool>
    - pricingStrategy : PricingStrategy

    + getPool(regionName : String) : RegionStockPool
    + getPrice(template : ItemTemplate, regionName : String) : double

    + recordProduction(regionName : String, template : ItemTemplate, amount : int)
    + recordConsumption(regionName : String, template : ItemTemplate, amount : int)
}

' =========================
' STOCK MODEL
' =========================
class RegionStockPool {
    - regionName : String
    - entries : Map<String, RegionStockEntry>

    + getEntry(template : ItemTemplate) : RegionStockEntry
}

class RegionStockEntry {
    - templateId : String
    - currentStock : int
    - maxStock : int
    - producedUnits : int
    - consumedUnits : int
    - elasticity : double

    + increaseProduction(amount : int)
    + increaseConsumption(amount : int)
    + getScarcityFactor() : double
}

class ItemTemplate {
    - id : String
    - basePrice : double
}

' =========================
' PRICING STRATEGY
' =========================
interface PricingStrategy {
    + calculate(entry : RegionStockEntry, template : ItemTemplate) : double
}

class ScarcityBasedPricingStrategy

PricingStrategy <|.. ScarcityBasedPricingStrategy

' =========================
' RELATIONSHIPS
' =========================
EconomyService --> RegionStockPool
EconomyService --> PricingStrategy
EconomyService --> ItemTemplate

RegionStockPool --> RegionStockEntry
RegionStockEntry --> ItemTemplate

PricingStrategy --> RegionStockEntry
PricingStrategy --> ItemTemplate

@enduml
